changes to google maps

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -105,7 +105,7 @@
 			<div class="col-md-12">
 				<div class="footer-manu">
 					<ul>
-						<li><a href="#">About Us</a></li>
+						<li><a href="{% url 'about' %}">About Us</a></li>
 						<li><a href="{% url 'contact' %}">Contact</a></li>
 						<li><a href="#">How it works</a></li>
 						<li><a href="#">Support</a></li>
