--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -85,7 +85,7 @@
             <div class="col-md-6 col-sm-12">
                 <div class="block">
                     <div class="google-map">
-                        <div class="map" id="map_canvas" data-latitude="51.5223477" data-longitude="-0.1622023" data-marker="images/marker.png"></div>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d4477.667854850875!2d-1.6113800636553555!3d52.271246661737145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s15%20bromhurst%20way%2C%20chase%20meadow%20square%2C%20warwick%20cv34%206ns!5e0!3m2!1sen!2suk!4v1611095872845!5m2!1sen!2suk" width="550" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
                     </div>
                 </div>
             </div>
