--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
 {% block content %}
     <h1>About us</h1>
+    <p>We make things easier for you</p>
 {% endblock content %}
